src/objects/NXP_Settings__c.object
<CustomObject>
    <description>This object will keep store various Configuration Settings/Data. There will be one Record Type for each category. 
1. Mapping of Countries(Iso Code) falling under NXP Sales Region.</description>
    <fields>
        <fullName>Alpha_2_Code__c</fullName>
        <label>Alpha 2 Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_3_Code__c</fullName>
        <label>Alpha 3 Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NXP Settings</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Setting Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NXP Settings</pluralLabel>
    <recordTypes>
        <fullName>Sales_Region</fullName>
        <active>true</active>
        <description>This record type will keep mapping of Country (Iso Codes) with NXP Sales Region</description>
        <label>Sales Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>